# LaplaceBenchmark

./: .gitignore  CMakeLists.txt  README.md
examples/: multithread_benchmark.cpp
include/: laplace_benchmark.h
python/: py_laplace_benchmark.cpp
src/: laplace_2d.cpp
